[package]
name = "tss-ecdsa"
version = "0.0.0"
description = "Multi-party ECDSA signing"
authors = ["Kevin Lewi <klewi@fb.com>", "Don Beaver <dbeaver@fb.com>"]
license = "MIT"
edition = "2021"
keywords = ["cryptography", "crypto", "signatures", "threshold", "ECDSA"]
categories = ["cryptography"]
readme = "README.md"

[features]
default = []
flame_it = ["flame", "flamer"]

[dependencies]
thiserror = "1"
k256 = { version = "0.10", features = ["arithmetic", "digest", "sha256", "ecdsa", "serde"] }
libpaillier = { version = "0.5", default-features = false, features = ["rust"] }
num-bigint = "0.4"
bincode = "1"
displaydoc = { version = "0.2", default-features = false }
hex = "0.4"
rand = "0.8"
sha2 = "0.9"
serde = "1"
generic-array = "0.14"
merlin = "3"
integer-encoding = "3"
lazy_static = "1"
flame = { version = "0.2", optional = true }
flamer = { version = "0.3", optional = true }

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc", default-features = false, features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1"
anyhow = "1"
futures = "0.3"
dialoguer = "0.10"
indicatif = "0.16"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false