[package]
name = "tss-ecdsa"
version = "0.0.0"
description = "Multi-party ECDSA signing"
authors = ["Kevin Lewi <klewi@fb.com>", "Don Beaver <dbeaver@fb.com>"]
license = "MIT"
edition = "2021"
keywords = ["cryptography", "crypto", "signatures", "threshold", "ECDSA"]
categories = ["cryptography"]
readme = "README.md"

[features]
default = []
flame_it = ["flame", "flamer"]

[dependencies]
bincode = "1"
bytemuck = "1.13"
bytemuck_derive = "1.4"
displaydoc = { version = "0.2", default-features = false }
flame = { version = "0.2", optional = true }
flamer = { version = "0.3", optional = true }
generic-array = "0.14"
hex = "0.4"
k256 = { version = "0.10", features = ["arithmetic", "digest", "sha256", "ecdsa", "serde"] }
lazy_static = "1"
libpaillier = { version = "0.5", default-features = false, features = ["gmp"] }
merlin = "3"
num-bigint = "0.4"
rand = "0.8"
serde = "1"
sha2 = "0.9"
thiserror = "1"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
criterion = "0.3"
dialoguer = "0.10"
env_logger = "0.10.0"
glass_pumpkin = "1"
indicatif = "0.16"
openssl = "0.10"
reqwest = { version = "0.11", features = ["json"] }
rocket = { version = "0.5.0-rc", default-features = false, features = ["json"] }
rug = { version = "1.16", default-features = false, features = ["integer", "rand"] }
test-log = { version = "0.2.11", features = ["trace"]}
tracing = {version = "0.1", default-features = false}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "e2e_benchmark"
harness = false

[[bench]]
name = "bignumber_benchmark"
harness = false
